# openai-tests

basics/: Chat API.ipynb  Stop Sequences.ipynb  pyproject.toml
jupyter-tests/: Echo and N.ipynb  First_Request.ipynb  Max_Tokens.ipynb  Models.ipynb  pyproject.toml
parameters/: Stream.ipynb
