[tool.poetry]
name = "basics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "basics"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^3.6.3"
openai = "^0.27.4"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
